I make some changement

--- a/index.html
+++ b/index.html
@@ -201,98 +201,68 @@
         </div>
     </div>
 </section>
-       <!-- About-->
-<section class="page-section" id="about">
-    <div class="container">
-        <div class="text-center">
-            <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted">My journey toward becoming an accountant.</h3>
-        </div>
-        <ul class="timeline">
-            <li>
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
-                <div class="timeline-panel">
-                    <div class="timeline-heading">
-                        <h4>2009-2011</h4>
-                        <h4 class="subheading">The Beginning of My Interest</h4>
-                    </div>
-                    <div class="timeline-body"><p class="text-muted">
-                        This was when I first discovered my interest in numbers and problem-solving. I enjoyed learning how money works, how businesses run, and how financial decisions shape outcomes. This early curiosity later pushed me toward studying accounting.
-                    </p></div>
+        <!-- About-->
+        <section class="page-section" id="about">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">About</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
-            </li>
-            <li class="timeline-inverted">
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
-                <div class="timeline-panel">
-                    <div class="timeline-heading">
-                        <h4>March 2011</h4>
-                        <h4 class="subheading">Developing My Skills</h4>
-                    </div>
-                    <div class="timeline-body"><p class="text-muted">
-                        As I learned more, I began building real accounting skills — from understanding financial statements to practicing budgeting and analyzing numbers. This stage helped me realize that accounting wasn’t just math; it was a way to help businesses make smart decisions.
-                    </p></div>
-                </div>
-            </li>
-            <li>
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
-                <div class="timeline-panel">
-                    <div class="timeline-heading">
-                        <h4>December 2015</h4>
-                        <h4 class="subheading">Committed to the Accounting Path</h4>
-                    </div>
-                    <div class="timeline-body"><p class="text-muted">
-                        By this time, I knew accounting was the major I wanted to pursue. I began studying more seriously — learning about auditing, financial reporting, taxation, and the importance of accuracy and ethics in the profession.
-                    </p></div>
-                </div>
-            </li>
-            <li class="timeline-inverted">
-                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
-                <div class="timeline-panel">
-                    <div class="timeline-heading">
-                        <h4>July 2020</h4>
-                        <h4 class="subheading">Growth & Professional Goals</h4>
-                    </div>
-                    <div class="timeline-body"><p class="text-muted">
-                        My accounting journey continued to grow as I gained experience, improved my analytical skills, and set goals for my future career — whether in auditing, corporate accounting, tax preparation, or becoming a CPA someday.
-                    </p></div>
-                </div>
-            </li>
-            <li class="timeline-inverted">
-                <div class="timeline-image">
-                    <h4>
-                        Be Part
-                        <br />
-                        Of My
-                        <br />
-                        Story!
-                    </h4>
-                </div>
-            </li>
-        </ul>
-    </div>
-</section>
-            <!-- Dream Job -->
-            <li>
-                <div class="timeline-image">
-                    <img class="rounded-circle img-fluid" src="assets/img/about/dream-accountant.jpg" alt="Dream accounting career" />
-                </div>
-                <div class="timeline-panel bg-secondary text-light">
-                    <div class="timeline-heading">
-                        <h4>Future Goal</h4>
-                        <h4 class="subheading">My Dream Job</h4>
-                    </div>
-                    <div class="timeline-body">
-                        <p class="text-muted">
-                            My goal is to become a professional accountant — maybe in corporate accounting, auditing, or eventually working 
-                            toward my CPA. I want to help businesses stay organized, make smart financial choices, and grow. 
-                            This is the future I’m building for myself.
-                        </p>
-                    </div>
-                </div>
-            </li>
-        </ul>
-    </div>
-</section>
+                <ul class="timeline">
+                    <li>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>2009-2011</h4>
+                                <h4 class="subheading">Our Humble Beginnings</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>March 2011</h4>
+                                <h4 class="subheading">An Agency is Born</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>December 2015</h4>
+                                <h4 class="subheading">Transition to Full Service</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>July 2020</h4>
+                                <h4 class="subheading">Phase Two Expansion</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <h4>
+                                Be Part
+                                <br />
+                                Of Our
+                                <br />
+                                Story!
+                            </h4>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
         <!-- Team-->
         <section class="page-section bg-light" id="team">
             <div class="container">
