I make some changement

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="Financial Statement Analysis" />
+                        <img class="img-fluid" src="assets/img/portfolio/10.jpeg" alt="Financial Statement Analysis" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Financial Statement Analysis</div>
@@ -124,7 +124,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="Budget Forecasting" />
+                        <img class="img-fluid" src="assets/img/portfolio/11.jpeg" alt="Budget Forecasting" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Budget Forecasting</div>
@@ -140,7 +140,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="Cost Accounting Report" />
+                        <img class="img-fluid" src="assets/img/portfolio/12.jpeg" alt="Cost Accounting Report" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Cost Accounting Report</div>
@@ -156,7 +156,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="Tax Preparation Exercise" />
+                        <img class="img-fluid" src="assets/img/portfolio/13.jpeg" alt="Tax Preparation Exercise" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Tax Preparation Exercise</div>
@@ -172,7 +172,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="QuickBooks Practice Simulation" />
+                        <img class="img-fluid" src="assets/img/portfolio/15.jpeg" alt="QuickBooks Practice Simulation" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">QuickBooks Practice Simulation</div>
@@ -188,7 +188,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="Audit & Internal Controls Review" />
+                        <img class="img-fluid" src="assets/img/portfolio/15.jpeg" alt="Audit & Internal Controls Review" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Audit & Internal Controls Review</div>
@@ -212,7 +212,7 @@ tml lang="en">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2017-2020</h4>
+                                <h4>2018-2020</h4>
                                 <h4 class="subheading">Where It Started</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">I liked organizing things and keeping track of money from a young age — budgeting for family trips, balancing my own savings. That curiosity is what nudged me toward accounting.</p></div>
