I make some changement

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/12.jpeg" alt="Cost Accounting Report" />
+                        <img class="img-fluid" src="assets/img/portfolio/16.jpeg" alt="Cost Accounting Report" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Cost Accounting Report</div>
@@ -172,7 +172,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/15.jpeg" alt="QuickBooks Practice Simulation" />
+                        <img class="img-fluid" src="assets/img/portfolio/18.jpeg" alt="QuickBooks Practice Simulation" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">QuickBooks Practice Simulation</div>
@@ -188,7 +188,7 @@ tml lang="en">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/15.jpeg" alt="Audit & Internal Controls Review" />
+                        <img class="img-fluid" src="assets/img/portfolio/17.jpeg" alt="Audit & Internal Controls Review" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Audit & Internal Controls Review</div>
@@ -272,7 +272,7 @@ tml lang="en">
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/20.PNG.jpeg" alt="..." />
                              <h4>Ryan Joseph</h4>
                             <p class="text-muted">Financial Statement Analysis</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
